test/compile_fail/write_non_writable_field.cpp
// Expected: static_assert failure — cannot write non-writable field (RO)
#include "test_registers.hpp"
#include <ros/apply.hpp>

int main() {
    constexpr mixed_reg r{};
    apply(r.status = 5_f); // status is RO
}
